proc-macro-error/test-crate/tests/ui/call_site.rs
extern crate test_crate;
use test_crate::make_fn;

make_fn!(abort_call_site);

fn main() {}
